fixed profile pic is too small

--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -95,7 +95,7 @@
 }
 
 #title{
-	font-size: 2vw;
+	font-size: calc(2px + 2vw);
 }
 
 #text{
@@ -108,6 +108,8 @@
 	display: inline-block;
 	height: 2.5vw;
 	width: 2.5vw;
+	min-width: 20px;
+	min-height: 20px;
 	margin-right: 5px;
 }
 
@@ -122,9 +124,14 @@
 	margin-left: -10%;
 }
 
+#nameCard{
+	font-size: calc(2px + 1.5vw);
+}
+
 #tip{
 	bottom: 3vw;
 	width: 23vw;
+	min-width: 15px;
 	max-width: 100%;
 	height: 8vw;
 	position: absolute;
